--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@ body {
   background-color: rgb(212 212 216);
 }
 
-button {
+Button {
   font-size: x-large;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem; 
