--- a/app/globals.css
+++ b/app/globals.css
@@ -7,15 +7,15 @@ body {
 }
 
 Button {
-  font-size: x-large;
-  padding-top: 1.5rem;
+  /* padding-top: 1.5rem;
   padding-bottom: 1.5rem; 
   padding-left: 3rem;
   padding-right: 3rem; 
   border-radius: 0.5rem; 
-  border-bottom-width: 8px; 
+  border-bottom-width: 8px;  */
+  font-size: x-large;
+  font-weight: 700;
   border-color: #bdb4a5; 
-  font-weight: 700; 
   color: #2C4C60; 
   background-color: #e8dcca;
   transition: 0.1s ease-out;
